styling select buttons, add title and more styling

--- a/index.html
+++ b/index.html
@@ -19,23 +19,28 @@
         <script type="text/javascript" src="./javascript/fileData.js"></script>
         <script type="text/javascript" src="./javascript/fileDataFunctions.js"></script>
         <!--  -->
-        <header>
+        <!-- <header>
             <h1></h1>
-        </header>
+        </header> -->
         <main>
-            <section id="first-content-section" class="main-section air-background">
-                <div><!-- used for flexbox -->
-                    <object class="section-filled" type="text/html" data="./components/waterTower/waterTower.html"></object>
-                    <object class="section-filled" type="text/html" data="./components/map/map.html"></object>
-                </div>
-                <footer>
-                    <section>
+            <section class="air-background">
+                <h2>Populatie voorzien is van fluoride water in Amerika</h2>
+                <section id="first-content-section" class="main-section air-background">
 
-                    </section>
-                </footer>
+                    <div><!-- used for flexbox -->
+                        <object class="section-filled" type="text/html" data="./components/waterTower/waterTower.html"></object>
+                        <object class="section-filled" type="text/html" data="./components/map/map.html"></object>
+                    </div>
+                    <footer>
+
+                    </footer>
+                </section>
+                <section class="main-section air-background">
+                    <object class="section-filled" type="text/html" data="./components/waterSupply/waterSupply.html"></object>
+                </section>
             </section>
-            <section class="main-section">
-
+            <section>
+                <h2>Gebitsgezondheid in Amerika (2014)</h2>
             </section>
         </main>
         <footer>
