--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="utf-8">
         <title>Project 1</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./styles/globalStyle.css">
         <link rel="stylesheet" href="./styles/reset.css">
         <link rel="stylesheet" href="./styles/index.css">
-        <link rel="stylesheet" href="./styles/globalStyle.css">
+
 
     </head>
 
@@ -24,7 +25,7 @@
         </header> -->
         <main>
             <section class="air-background">
-                <h2>Populatie voorzien is van fluoride water in Amerika</h2>
+                <h2>Populatie % voorzien van fluoride water in Amerika</h2>
                 <section id="first-content-section" class="main-section air-background">
 
                     <div><!-- used for flexbox -->
@@ -35,8 +36,13 @@
 
                     </footer>
                 </section>
-                <section class="main-section air-background">
+                <section id="second-content-section" class="main-section ground-background">
                     <object class="section-filled" type="text/html" data="./components/waterSupply/waterSupply.html"></object>
+                    <article id="information-about-subject" class="">
+                        <img src="images/article-icon.svg" alt="Warning">
+                        <h3>title</h3>
+                        <p>dius gdysogu dsjcxgslv h oaxk ygireu  ygdfu he97 y8 rsdigusdghdo; r ydshyu gr 8goh s9ygh9fdugjbdgo;rdhg </p>
+                    </article>
                 </section>
             </section>
             <section>
@@ -47,6 +53,7 @@
 
         </footer>
         <!-- Load after the content -->
+        <script type="text/javascript" src="./javascript/stories.js"></script>
         <script type="text/javascript" src="./javascript/visualRepresentation.js"></script> <!-- Used to generate elements that are not directly linked with the components -->
         <script type="text/javascript" src="./javascript/index.js"></script> <!-- start loading the datasets -->
         <!--  -->
