Added stories system and removed comments

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </section>
                 <section id="second-content-section" class="main-section ground-background">
                     <object class="section-filled" type="text/html" data="./components/waterSupply/waterSupply.html"></object>
-                    <article id="information-about-subject" class="">
+                    <article id="information-about-subject" class="disabled-subject-info">
                         <img src="images/article-icon.svg" alt="Warning">
                         <h3>title</h3>
                         <p>dius gdysogu dsjcxgslv h oaxk ygireu  ygdfu he97 y8 rsdigusdghdo; r ydshyu gr 8goh s9ygh9fdugjbdgo;rdhg </p>
