--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     <article id="information-about-subject" class="disabled-subject-info">
                         <img src="images/article-icon.svg" alt="Warning">
                         <h3>title</h3>
-                        <p>dius gdysogu dsjcxgslv h oaxk ygireu  ygdfu he97 y8 rsdigusdghdo; r ydshyu gr 8goh s9ygh9fdugjbdgo;rdhg </p>
+                        <p>dius gdysogu dsjcxgslv h oaxk ygireu  ygdfu he97 y8 rsdigusdghdo; r ydshyu gr 8goh s9ygh9fdugjbdgo;rdhg</p>
+                        <a href="#" target="_blank">Referentie</a>
                     </article>
                 </section>
             </section>
