--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="./javascript/fileData.js"></script>
         <script type="text/javascript" src="./javascript/fileDataFunctions.js"></script>
         <!--  -->
-        
+
         <main>
             <section class="air-background">
                 <h2>Populatie % voorzien van fluoride water in Amerika</h2>
@@ -38,14 +38,20 @@
                     <object class="section-filled" type="text/html" data="./components/waterSupply/waterSupply.html"></object>
                     <article id="information-about-subject" class="disabled-subject-info">
                         <img src="images/article-icon.svg" alt="Warning">
-                        <h3>title</h3>
-                        <p>dius gdysogu dsjcxgslv h oaxk ygireu  ygdfu he97 y8 rsdigusdghdo; r ydshyu gr 8goh s9ygh9fdugjbdgo;rdhg</p>
+                        <h3></h3>
+                        <p></p>
                         <a href="#" target="_blank">Referentie</a>
                     </article>
                 </section>
             </section>
-            <section>
+            <section id="third-content-section" class="air-background">
                 <h2>Gebitsgezondheid in Amerika (2014)</h2>
+                <section>
+                    <ul>
+
+                    </ul>
+                    <object id="toothbrush" type="text/html" data="./components/toothbrush/toothbrush.html"></object>
+                </section>
             </section>
         </main>
         <footer>
