--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </section>
             </section>
             <section id="third-content-section" class="air-background">
-                <h2>Gebitsgezondheid in Amerika (2014)</h2>
+                <h2>Gemiddelde gebitsgezondheid volwassenen in Amerika (2014)</h2>
                 <section>
                     <ul>
 
