--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </section>
             <section id="third-content-section" class="air-background">
                 <h2>Gemiddelde gebitsgezondheid volwassenen in Amerika (2014)</h2>
-                <p>0% is ongezond. 100% is gezond</p>
+                <p>0% is heel ongezond. 100% is heel gezond. Muisknop inhouden om te poetsen!</p>
                 <section>
                     <ul>
 
