header & styling fixed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
         <main>
             <section class="air-background">
-                <h2>Populatie % voorzien van fluoride water in Amerika</h2>
+                <header>
+                    <h2>Populatie % voorzien van fluoride water in Amerika</h2>
+                </header>
                 <section id="first-content-section" class="main-section air-background">
 
                     <div><!-- used for flexbox -->
@@ -45,8 +47,10 @@
                 </section>
             </section>
             <section id="third-content-section" class="air-background">
-                <h2>Gemiddelde gebitsgezondheid volwassenen in Amerika (2014)</h2>
-                <p>0% is heel ongezond. 100% is heel gezond. Muisknop inhouden om te poetsen!</p>
+                <header>
+                    <h2>Gemiddelde gebitsgezondheid volwassenen in Amerika (2014)</h2>
+                    <p>0% is heel ongezond. 100% is heel gezond. Muisknop inhouden om te poetsen!</p>
+                </header>
                 <section>
                     <ul>
 
